@@ -3513,4 +3513,6 @@
 	  in is non-functional and is simply the framework for ELF support.
 	* include/nuttx/binfmt.h, nxflat.h, elf.h, and symtab.h:  Moved to
 	  include/nuttx/binfmt/.
+	* arch/sim/src/up_elf.c and arch/x86/src/common/up_elf.c:  Add
+	  for ELF modules.
 
